리뷰 기능 버그 수정